<resources>
    <string name="app_name">LocationTracker</string>
    <string name="ip_address_tracker">IP Address Tracker</string>
    <string name="ip_address">IP ADDRESS</string>
    <string name="sample_ip">192.212.174.101</string>
    <string name="location">LOCATION</string>
    <string name="time_zone">TIME ZONE</string>
    <string name="isp">ISP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter_email">Enter your email</string>
    <string name="login">Login</string>
    <string name="myIp">My Ip: </string>
</resources>