<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="locationInfo"
            type="com.learning.locationtracker.LocationInfo" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:background="@drawable/pattern_bg"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip_address_tracker"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_big"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top"/>
                <TextView
                    android:id="@+id/myIp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myIp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_small"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"/>
                <LinearLayout
                    android:id="@+id/llh"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    android:layout_marginEnd="@dimen/margin_end"
                    android:layout_marginStart="@dimen/margin_start"
                    android:background="@drawable/edit_back_white"
                    android:layout_marginTop="@dimen/margin_top">
                    <EditText
                        android:id="@+id/ip_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@null"
                        android:inputType="text"
                        android:padding="12dp"
                        android:hint="@string/sample_ip"
                        tools:ignore="Autofill" />

                    <ImageView
                        android:id="@+id/image_btn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/edit_back_black"
                        android:scaleType="center"
                        android:src="@drawable/ic_icon_arrow"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </LinearLayout>
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/ll"
                android:layout_weight="3"
                tools:ignore="FragmentTagUsage" />

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/card_view_top_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ip_address"
                    />
                <TextView
                    android:id="@+id/ip_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@{locationInfo.ipAddress}"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/location"
                    android:layout_marginTop="@dimen/margin_top"/>
                <TextView
                    android:id="@+id/location_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@{locationInfo.location}"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/time_zone"
                    android:layout_marginTop="@dimen/margin_top"/>
                <TextView
                    android:id="@+id/timeZone_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@{locationInfo.timeZone}"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/isp"
                    android:layout_marginTop="@dimen/margin_top"/>
                <TextView
                    android:id="@+id/isp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@{locationInfo.isp}"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
